Nutch Change Log

Current Development

* NUTCH-1590 [SECURITY] Frame injection vulnerability in published Javadoc (jnioche)

* NUTCH-1736 Can't fetch page if http response header contains Transfer-Encoding：chunked (ysc via jnioche)

* NUTCH-1782 NodeWalker to return current node (markus)

* NUTCH-1781 Update gora-*-mapping.xml and gora.proeprties to reflect Gora 0.4 (lewismc)

* NUTCH-1768 Upgrade to ElasticSearch 1.1.0 (jnioche)

* NUTCH-1634 readdb -stats shows the result twice (kaveh minooie via jnioche)

* NUTCH-1780 ttl and gc_grace_seconds attributes are missing from gora-cassandra-mapping.xml file (kaveh minooie via lewismc)

* NUTCH-1676 Add rudimentary SSL support to protocol-http (jnioche, markus)

* NUTCH-1674 Use batchId filter to enable scan (GORA-119) for Fetch,Parse,Update,Index (Tien Nguyen Manh and Alparslan Avcı via jnioche)

* NUTCH-1714 Upgrade to Gora 0.4 (Alparslan Avcı via jnioche)

* NUTCH-1752 Cache robots.txt rules per protocol:host:port (snagel)

* NUTCH-1613 Timeouts in protocol-httpclient when crawling same host with >2 threads (brian44 via jnioche)

* NUTCH-1182 fetcher to log hung threads (snagel)

* NUTCH-1618 Turn speculative execution off for Fetching (talat)

* NUTCH-1657 ORIGINAL_CHAR_ENCODING and CHAR_ENCODING_FOR_CONVERSION never set in HTMLParser (talat)

* NUTCH-1725 CleaningJob's reducer does not commit deleted docs. (ilhamikalkan via talat)

* NUTCH-1728 indexer-solr plugin is not delete docs from Solr (ilhamikalkan via talat)

* NUTCH-1753 Eclipse dependecy problem for 2.x (talat)

* NUTCH-1720 Duplicate lines in HttpBase.java (Walter Tietze via jnioche)

* NUTCH-797 URL not properly constructed when link target begins with a "?" (Doug Cook, Robert Hohman, Stondet, ab via snagel)

* NUTCH-1759 Upgrade to Crawler Commons 0.4 (jnioche)

* NUTCH-1700 Remove deprecated code in src/plugin/creativecommons/build.xml (lewismc)
